[gd_scene load_steps=2 format=3 uid="uid://c8xvq7y1nmqkp"]

[ext_resource type="Script" path="res://scripts/ui/scientist_card.gd" id="1_scientist_card"]

[node name="ScientistCard" type="PanelContainer"]
custom_minimum_size = Vector2(350, 500)
offset_right = 350.0
offset_bottom = 500.0
script = ExtResource("1_scientist_card")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ScientistNameLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "STITCHER - Apprentice"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TierDotsLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "● ● ● ○ ○"
horizontal_alignment = 1

[node name="TierLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Tier 3/5"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="SalaryLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Salary: 40 gold/wave"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Status: Working"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AbilitiesHeader" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CURRENT ABILITIES:"

[node name="AbilitiesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UpgradeSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="NextTierLabel" type="Label" parent="MarginContainer/VBoxContainer/UpgradeSection"]
unique_name_in_owner = true
layout_mode = 2
text = "NEXT: Tier 4 - Grand Stitcher"

[node name="NewAbilityLabel" type="Label" parent="MarginContainer/VBoxContainer/UpgradeSection"]
unique_name_in_owner = true
layout_mode = 2
text = "+ NEW: Emergency recalls"

[node name="UpgradeCostLabel" type="Label" parent="MarginContainer/VBoxContainer/UpgradeSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Cost: 15,000 gold"

[node name="UpgradeSalaryLabel" type="Label" parent="MarginContainer/VBoxContainer/UpgradeSection"]
unique_name_in_owner = true
layout_mode = 2
text = "New Salary: 75 gold/wave"

[node name="WaveRequirementLabel" type="Label" parent="MarginContainer/VBoxContainer/UpgradeSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Requires: 100 waves (73/100)"

[node name="UpgradeButton" type="Button" parent="MarginContainer/VBoxContainer/UpgradeSection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "UPGRADE (15,000 gold)"

[node name="HireButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "HIRE (500 gold)"
